uvote-platform/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: uvote-dev-mtls
  namespace: uvote-dev
spec:
  mtls:
    mode: PERMISSIVE
